Fixed Hero text alignment

--- a/styles.css
+++ b/styles.css
@@ -63,25 +63,31 @@ a {
 }
 
 .wrapper-hero {
-    /*border: 1px solid #fff;*/
+    /*border: 1px solid #fff; */
     width: 60%;
     display: flex; 
     justify-content: center;
     margin: 150px 0px;
+    gap: 15px;
 }
 
 .hero-text-container {
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .hero-main-text {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
+    margin-bottom: 0px;
+}
+
+.hero-text {
+    margin-top: 0px;
 }
 
 button {
@@ -94,28 +100,9 @@ button {
     flex-shrink: 0;
 }
 
-/*.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.flex-item-left {
-  flex: 50%;
-}
-
-.flex-item-right {
-  flex: 50%;
-}*/
-
-/*.img-placeholder {
-    border: 1px solid #fff;
-    width: 50%;
-    height: auto;
-} */
-
 .hero-img{
     width: 50%;
-    height: 300px;
+    height: 250px;
 }
 
 .content-container {
@@ -220,7 +207,7 @@ button {
 }
 
 .foot-container {
-    background-color: #E5E7EB;
+    background-color: #1f2937;
     padding: 15px;
 }
 
